[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transformation-diagrams"
description = "Library for calculation and visualisation of CCT and TTT diagrams."
authors = [
    { name = "Christoph Renzing", email = "christoph.renzing@imf.tu-freiberg.de" },
]
license = "BSD-3-Clause"
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Hatch",
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Framework :: Pytest",
    "Framework :: Sphinx",
    "Natural Language :: English",
]
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas"
]

dynamic = ["version"]

[project.optional-dependencies]
plot = [
    "matplotlib ~= 3.7"
]

[tool.pytest.ini_options]
filterwarnings = [
#    "error",
    'ignore:Matplotlib is currently using:UserWarning',
    'ignore:More than 20 figures have been opened:RuntimeWarning',
]

